<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_prompt_delete_confirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.example.lenovo.memcreator.activities.PromptDeleteConfirmationActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#ffffff"
        android:text="@string/do_you_want_to_add_photos_to_this_memory"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:text="@string/yes"
            android:textColor="#000000"
            android:textSize="12sp"
            android:background="#ffffff"
            tools:ignore="ButtonStyle,RtlHardcoded"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/no"
            android:background="#ffffff"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:textColor="#000000"
            tools:ignore="ButtonOrder,ButtonStyle,RtlHardcoded"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

</LinearLayout>
